<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888888" />

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView style="@style/Tab" android:text="@string/tab_news" />
        <TextView style="@style/Tab" android:text="@string/tab_guides" />
        <TextView style="@style/Tab" android:text="@string/tab_wallpapers" />
        <TextView style="@style/Tab" android:text="@string/tab_settings" />
    </LinearLayout>
</LinearLayout>
